--- a/UserMaintenance/UserMaintenance/Resource1.resx
+++ b/UserMaintenance/UserMaintenance/Resource1.resx
@@ -120,10 +120,10 @@
   <data name="Add" xml:space="preserve">
     <value>Hozzáadás</value>
   </data>
-  <data name="FirstName" xml:space="preserve">
-    <value>Keresztnév</value>
-  </data>
-  <data name="LastName" xml:space="preserve">
+  <data name="FullName" xml:space="preserve">
     <value>Vezetéknév</value>
+  </data>
+  <data name="valami" xml:space="preserve">
+    <value>valami2</value>
   </data>
 </root>
